--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,8 +11,11 @@
     <div class="mx-auto h-[300vh]  max-w-screen-lg relative">
 
       <div class="fixed top-0 right-0 w-36 h-screen flex flex-col items-center justify-center">
-        <hr/>
-        <button class="text-white text-s mb-3 navBtn" onclick="scrollToTop()">Home </button>
+        <div style="display: flex;">
+          <hr/>
+          <button class="text-white text-s mb-3 navBtn" onclick="scrollToTop()">Home </button>
+        </div>
+       
         <button class="text-white text-s mb-3 navBtn" onclick="scrollToSection('about-me-sect')">About</button>
         <button class="text-white text-s navBtn" onclick="scrollToSection('projects')">Projects</button>
       </div>
