--- a/src/html/index.html
+++ b/src/html/index.html
@@ -89,7 +89,7 @@
         </span>
 
         <div id="social-btns" class="flex mb-3">
-          <a href="" class="group inline-block">
+          <a href="https://github.com/smithville77" class="group inline-block">
             <span class="social-btn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -106,7 +106,7 @@
             </span>
           </a>
 
-          <a href="" class="group inline-block"
+          <a href="https://www.linkedin.com/in/adam-smith-520320268/" class="group inline-block"
             ><span class="social-btn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -143,7 +143,7 @@
             nobis officiis commodi quo fugit id. Sed fugiat adipisci repudiandae
             nisi cum, voluptatibus explicabo quod tenetur ratione beatae fugit,
             sequi tempora iste praesentium, modi ipsa itaque atque ea. Suscipit
-            deleniti sunt quibusdam dignissimos?
+            deleniti sunt quibusdam dignissimos
           </p>
         </div>
       </section>
@@ -486,7 +486,7 @@
       <div class="flex flex-col">
         <p id="footer-date" class="text-white"></p>
         <div class="flex mb-3 sm:block md:hidden text-white">
-          <a href="" id="social-btns-footer" class="group inline-block">
+          <a href="https://github.com/smithville77" id="social-btns-footer" class="group inline-block">
             <span class="social-btn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -504,7 +504,7 @@
             </span>
           </a>
 
-          <a href="" class="group inline-block"
+          <a href="https://www.linkedin.com/in/adam-smith-520320268/" class="group inline-block"
             ><span class="social-btn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
