cleaned up small code

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,10 +39,12 @@
                 <p>
                   Junior developer with experience in Javascript, React, HTML5
                   and CSS3.
-                  </p>
-                  <br />
-                  <p>
-                  Currently studying a Diploma of Information Technology (Advanced Programming) & Diploma of Information Technology (Backend Web Development).
+                </p>
+                <br />
+                <p>
+                  Currently studying a Diploma of Information Technology
+                  (Advanced Programming) & Diploma of Information Technology
+                  (Backend Web Development).
                 </p>
                 <br />
                 <span id="weather-desc"></span>
