--- a/src/html/index.html
+++ b/src/html/index.html
@@ -160,41 +160,8 @@
           </div>
           <span id="experience" class="h-fit w-full grid grid-cols-2 gap-4">
             <div class="col-span-2 text-xl">Experience</div>
-            <div class="..."><em>November 1 - 31 December</em></div>
-            <div class="...">
-              <span>
-                <h4>Web Dev</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Excepturi, doloribus!
-                </p>
-                <span
-                  class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
-                  >Javascript</span
-                >
-                <span
-                  class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
-                  >HTML5</span
-                >
-                <span
-                  class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
-                  >CSS3</span
-                >
-                <span
-                  class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
-                  >JQuery</span
-                >
-                <span
-                  class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
-                  >Bootstrap</span
-                >
-                <span
-                  class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
-                  >WordPress</span
-                >
-              </span>
-            </div>
-            <div class="..."><em>Web Something</em></div>
+      
+            <div class="..."><em>June 1st, 2023 - December 22nd, 2023</em></div>
             <div class="...">
               <span>
                 <h4>Asset Management Council</h4>
@@ -203,6 +170,31 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Excepturi, doloribus!
                 </p>
+                <span
+                class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
+                >Javascript</span
+              >
+              <span
+                class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
+                >HTML5</span
+              >
+              <span
+                class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
+                >CSS3</span
+              >
+              <span
+                class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
+                >JQuery</span
+              >
+              <span
+                class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
+                >Bootstrap</span
+              >
+              <span
+                class="inline-block rounded-full px-3 py-1 text-sm text-bubble-text mr-2 mb-2 bg-bubble"
+                >WordPress</span
+              >
+            </span>
               </span>
             </div>
           </span>
@@ -211,23 +203,45 @@
             <div class="..."><em>Holmesglen</em></div>
             <div class="...">
               <span>
-                <h4>Asset Management Council</h4>
-                <em>Junior Web Developer</em>
-                <p>
+                <h4>Certificate IV in Information Technology</h4>
+                <em>June 2022 - August 2023</em>
+                <!-- <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Excepturi, doloribus!
-                </p>
+                </p> -->
+              </span>
+            </div>
+            <div class="..."><em>Holmesglen</em></div>
+            <div class="...">
+              <span>
+                <h4>Diploma of Information Technology(Advanced Programming)</h4>
+                <em>January 2024 - November 2024</em>
+                <!-- <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Excepturi, doloribus!
+                </p> -->
+              </span>
+            </div>
+            <div class="..."><em>Holmesglen</em></div>
+            <div class="...">
+              <span>
+                <h4>Diploma of Information Technology(Backend Web Development)</h4>
+                <em>January 2024 - November 2024</em>
+                <!-- <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Excepturi, doloribus!
+                </p> -->
               </span>
             </div>
             <div class="..."><em>General Assembly</em></div>
             <div class="...">
               <span>
-                <h4>Asset Management Council</h4>
-                <em>Junior Web Developer</em>
-                <p>
+                <h4>React Development Course</h4>
+                <em>January 2023 - April 2023</em>
+                <!-- <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Excepturi, doloribus!
-                </p>
+                </p> -->
               </span>
             </div>
           </span>
