--- a/src/html/index.html
+++ b/src/html/index.html
@@ -161,11 +161,11 @@
           <span id="experience" class="h-fit w-full grid grid-cols-2 gap-4">
             <div class="col-span-2 text-xl">Experience</div>
       
-            <div class="..."><em>June 1st, 2023 - December 22nd, 2023</em></div>
+            <div class="..."><em>Asset Management Council</em></div>
             <div class="...">
               <span>
-                <h4>Asset Management Council</h4>
-                <em>Junior Web Developer</em>
+                <h4>Junior Web Developer</h4>
+                <em>June 1st, 2023 - December 22nd, 2023</em>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Excepturi, doloribus!
@@ -412,7 +412,7 @@
                   <div class="mb-5">
                     <label
                       for="name"
-                      class="mb-3 block text-base font-medium text-[#07074D]"
+                      class="mb-3 block text-base font-medium text-white"
                     >
                       Full Name
                     </label>
@@ -427,7 +427,7 @@
                   <div class="mb-5">
                     <label
                       for="email"
-                      class="mb-3 block text-base font-medium text-[#07074D]"
+                      class="mb-3 block text-base font-medium text-white"
                     >
                       Email Address
                     </label>
@@ -442,7 +442,7 @@
                   <div class="mb-5">
                     <label
                       for="subject"
-                      class="mb-3 block text-base font-medium text-[#07074D]"
+                      class="mb-3 block text-base font-medium text-white"
                     >
                       Subject
                     </label>
@@ -457,7 +457,7 @@
                   <div class="mb-5">
                     <label
                       for="message"
-                      class="mb-3 block text-base font-medium text-[#07074D]"
+                      class="mb-3 block text-base font-medium text-white"
                     >
                       Message
                     </label>
