--- a/src/html/index.html
+++ b/src/html/index.html
@@ -490,10 +490,10 @@
 
       <button
         id="scroll-top"
-        class="fixed bottom-20 right-10 h-10 w-10 rounded-full bg-bubble"
+        class="fixed bottom-20 right-10 h-10 w-10 rounded-full bg-[#6A64F1]"
       >
         <span
-          class="material-symbols-outlined flex justify-center items-center"
+          class="material-symbols-outlined flex justify-center items-center text-white"
         >
           keyboard_arrow_up
         </span>
