improved the active sect highligting on scroll

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,7 +30,7 @@
         class="fixed top-0 left-10 w-[10vw] h-full flex-col justify-between hidden lg:flex"
       >
         <div id="welcome-spacer" class="w-fit">
-          <section id="introduction" class="text-white h-50 flex relative">
+          <div id="introduction" class="text-white h-50 flex relative">
             <!-- Introduction container -->
             <div class="mt-10">
               <h1 class="text-4xl font-bold">Hi, I'm Adam.</h1>
@@ -50,7 +50,7 @@
                 <span id="weather-desc"></span>
               </span>
             </div>
-          </section>
+          </div>
         </div>
         <span>
           <div class="flex items-center hr-nav-container">
@@ -128,7 +128,7 @@
       <!-- Hero Section -->
       <section
         id="welcome-sect"
-        class="text-white h-50 w-3/4 mt-20 mb-10 p-3 flex justify-between items-center relative rounded bg-card shadow-2xl"
+        class="text-white h-50 w-3/4 mt-20  p-3 flex justify-between items-center relative rounded bg-card shadow-2xl"
       >
         <!-- Introduction container -->
         <div class="">
@@ -152,7 +152,7 @@
       <section
         id="about-me-sect"
         style="visibility: hidden;"
-        class="text-white h-fit w-3/4 mt-10 mb-10 p-3 justify-between items-center relative rounded bg-card shadow-2xl hide"
+        class="text-white h-fit w-3/4 p-3 mt-10   justify-between items-center relative rounded bg-card shadow-2xl hide"
       >
         <div class="h-fit">
           <div class="header-container rounded w-fit p-2 shadow-xl">
@@ -260,7 +260,7 @@
       <section
         id="projects"
         style="visibility: hidden;"
-        class="text-white h-fit w-3/4 flex relative rounded bg-card shadow-2xl"
+        class="text-white h-fit w-3/4 flex relative mt-10  rounded bg-card shadow-2xl"
       >
         <div class="mt-5 w-full">
           <div class="header-container rounded w-fit p-2 shadow-xl">
@@ -392,7 +392,7 @@
       <section
         id="contact"
         style="visibility: hidden;"
-        class="text-white h-fit w-3/4 mt-10 mb-10 p-3 flex justify-between items-center relative rounded bg-card mb-50 shadow-2xl"
+        class="text-white h-fit w-3/4  mt-10 mb-10  p-3 flex justify-between items-center relative rounded bg-card mb-50 shadow-2xl"
       >
         <div>
           <div class="w-full">
