--- a/src/html/index.html
+++ b/src/html/index.html
@@ -88,6 +88,8 @@
         </span>
 
         <div id="social-btns" class="flex mb-3">
+          <button id="toggleDarkMode">Toggle Dark Mode</button>
+
           <a href="https://github.com/smithville77" class="group inline-block">
             <span class="social-btn">
               <svg
