--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,7 +23,7 @@
   <body>
     <div
       id="main-sect"
-      class="mx-auto min-h-screen max-w-screen-lg relative flex flex-col justify-center items-center"
+      class="mx-auto min-h-screen max-w-screen-lg relative flex flex-col justify-center items-center dark:bg-white"
     >
       <div
         id="sidebar"
@@ -88,8 +88,6 @@
         </span>
 
         <div id="social-btns" class="flex mb-3">
-          <button id="toggleDarkMode">Toggle Dark Mode</button>
-
           <a href="https://github.com/smithville77" class="group inline-block">
             <span class="social-btn">
               <svg
