--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,17 +27,18 @@
     >
       <div
         id="sidebar"
-        class="fixed top-0 left-10 w-[10vw] h-full flex-col justify-between hidden lg:flex"
+        class="fixed top-0 left-10 w-[15vw] h-full flex-col justify-between hidden lg:flex"
       >
         <div id="welcome-spacer" class="w-fit">
           <div id="introduction" class="text-black dark:text-white h-50 flex relative">
             <!-- Introduction container -->
             <div class="mt-10">
               <h1 class="text-4xl font-bold">Hi, I'm Adam.</h1>
-              <p class="italic">Web Developer</p>
+              
               <span id="intro-container" class="inline">
                 <p>
-                  Junior developer with experience in Javascript, React, HTML5
+                  Welcome to my personal page!
+                  I'm a junior developer with experience in Javascript, React, HTML5
                   and CSS3.
                 </p>
                 <br />
@@ -473,7 +474,7 @@
                   </div>
                   <div>
                     <button
-                      class="hover:shadow-form rounded-md text-black dark:text-white bg-[#510176] dark:bg-[#6A64F1] py-3 px-8 text-base font-semibold text-white outline-none"
+                      class="hover:shadow-form rounded-md text-black dark:text-white bg-blue-700 dark:bg-[#6A64F1] py-3 px-8 text-base font-semibold text-white outline-none"
                     >
                       Submit
                     </button>
