--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,12 +38,12 @@
             <div class="mt-10">
               <!-- <button id="toggleDarkMode">Toggle Dark Mode</button> -->
 
-              <button id="btn-toggle-container" class="flex w-100">
+              <button id="btn-toggle-container" class="flex w-100 shadow-[inset_0_-2px_4px_rgba(0,0,0,0.6)] bg-indigo-800 dark:bg-white text-white dark:text-black rounded-md justify-center content-center p-2">
                 <div id="light-icon" class="hidden">
-                  <span class="material-symbols-outlined"> wb_sunny </span>
+                  <span class="material-symbols-outlined flex justify-center"> wb_sunny </span>
                 </div>
                 <div id="dark-icon">
-                  <span class="material-symbols-outlined"> dark_mode </span>
+                  <span class="material-symbols-outlined flex justify-center"> dark_mode </span>
                 </div>
               </button>
               <h1 class="text-4xl font-bold">Hi, I'm Adam.</h1>
@@ -66,36 +66,36 @@
           </div>
         </div>
         <span>
-          <div class="flex items-center hr-nav-container">
+          <div class="flex items-center mb-2 hr-nav-container">
             <hr class="hr-active" />
             <button
               id="welcome-btn"
-              class="text-black dark:text-white text-s mb-3 ml-3 navBtn"
+              class="text-black dark:text-white text-s ml-3 navBtn"
               onclick="scrollToTop()"
             >
               Welcome
             </button>
           </div>
-          <div class="flex items-center hr-nav-container">
+          <div class="flex items-center mb-2 hr-nav-container">
             <hr class="hr-active" />
             <button
-              class="text-black dark:text-white text-s mb-3 ml-3 navBtn"
+              class="text-black dark:text-white text-s ml-3 navBtn"
               id="about-btn"
             >
               About
             </button>
           </div>
 
-          <div class="flex items-center hr-nav-container">
+          <div class="flex items-center mb-2 hr-nav-container">
             <hr class="hr-active" />
             <button
-              class="text-black dark:text-white text-s mb-3 ml-3 navBtn"
+              class="text-black dark:text-white text-s ml-3 navBtn"
               id="projects-btn"
             >
               Projects
             </button>
           </div>
-          <div class="flex items-center hr-nav-container">
+          <div class="flex items-center mb-2 hr-nav-container">
             <hr class="hr-active" />
             <button
               class="text-black dark:text-white text-s ml-3 navBtn"
