light/dark context added

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,7 +37,7 @@
             <!-- Introduction container -->
             <div class="mt-10">
               <!-- <button id="toggleDarkMode">Toggle Dark Mode</button> -->
-
+              <p>Switch theme</p>
               <button id="btn-toggle-container" class="flex w-100 shadow-[inset_0_-2px_4px_rgba(0,0,0,0.6)] bg-indigo-800 dark:bg-white text-white dark:text-black rounded-md justify-center content-center p-2">
                 <div id="light-icon" class="hidden">
                   <span class="material-symbols-outlined flex justify-center"> wb_sunny </span>
